2005-04-04  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-DesignJet_500ps.xml,
	  printer/HP-DesignJet_100plus.xml, driver/dnj650c.xml,
	  driver/chp2200.xml, opt/2.xml, opt/dnj650c-Resolution.xml,
	  opt/largeformat-PageSize.xml: Added HP DesignJet 500ps and HP
	  DesignJet 100plus (Thanks to Albert Gonzalez, albert at
	  imego2000 dot dyndns dot org, and Oleksandr Shneyder, oleksandr
	  dot shneyder at treuchtlingen dot de).

	* opt/dnj650c-Resolution.xml: Added "Resolution" option for the
	  "dnj650c" driver.

2005-04-01  Jacqueline Pitter <jacqueline.pitter@hp.com>

	* printer/HP-LaserJet_1022.xml,
	  printer/HP-LaserJet_4240.xml,
	  printer/HP-LaserJet_9040.xml,
	  printer/HP-Color_LaserJet_4610.xml,
	  printer/HP-Business_Inkjet_1000.xml: added new support

	* driver/Postscript.xml: added HP-LaserJet_4240, HP-LaserJet_9040,
	  and HP-Color_LaserJet_4610.

2005-03-30  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Lexmark-Optra_E321.xml, driver/ljet4.xml,
	  driver/lj4dith.xml: Added Lexmark Optra E321.

	* opt/161.xml: Activated tray selection with the "Postscript" driver
	  also for Lexmark and Generic printers.

2005-03-28  Jacqueline Pitter <jacqueline.pitter@hp.com>

	* printer/HP-LaserJet_1010.xml, printer/HP-LaserJet_1012.xml,
	  printer/HP-Color_LaserJet_3500.xml,
	  printer/HP-Color_LaserJet_3550.xml: updated level of support
	  with hpijs 0.9 release which adds FastRaster support.

2005-03-28  Hidenori ISHII <hidenori.ishii@avasys.jp>
 
        * opt/2.xml: add constraint of eplaser and eplaser-jp.
 
        * printer/Epson-LP-2500.xml: fix wrong printer model.

	* printer/Epson-EPL-5900.xml: change driver from pxlmono to eplaser.
 
2005-03-24  Hidenori ISHII <hidenori.ishii@avasys.jp>

	* opt/2.xml: change eplaser and eplaser-jp support paper size.

	* driver/eplaser.xml,
	  driver/eplaser-jp.xml,
	  opt/eplaser-InputSlot.xml,
	  printer/Epson-AcuLaser_C1000.xml,
	  printer/Epson-AcuLaser_C900.xml: