@@ -24,6 +24,12 @@
     </text>
   </lang>
   <autodetect>
+    <usb>
+      <manufacturer>Hewlett-Packard</manufacturer>
+      <model>hp LaserJet 2420</model>
+      <commandset>PJL,MLC,PCLXL,PCL,PJL,POSTSCRIPT</commandset>
+      <description>Hewlett-Packard LaserJet 2420</description>
+    </usb>
   </autodetect>
   <functionality>A</functionality>
   <driver>Postscript</driver>
