@@ -1,3 +1,8 @@
+2005-04-12  Tim Waugh <twaugh@redhat.com>
+
+	* printer/HP-LaserJet_2420.xml: Added IEEE 1284 information (RH
+	  bug #151780).
+
 2005-04-04  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* printer/HP-DesignJet_500ps.xml,
